@@ -1,5 +1,14 @@
 2006-09-06  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkEntry.c:     move hard-coded ALWAYS_SHOW_SELECTION
+	* generic/tkInt.h:       control of entry/text selection display
+	* generic/tkText.c:      based on focus to the Tcl level,
+	* generic/tkTextBTree.c: controlled by ::tk::AlwaysShowSelection
+	* generic/tkTextDisp.c:  (boolean, private).  [Bug 1553691]
+	* generic/tkWindow.c:
+	* library/tk.tcl
+	* unix/tkUnixPort.h:
+
 	* generic/tkText.c (DeleteChars): backport of 8.5 text delete
 	speedup that removes tags from deleted area first. [Bug 1456342]
 
